update requirements and slurm

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # requirements.txt
 
 # Training dependencies
-ksim=
-xax
+ksim==0.1.3
+xax==0.3.0
 mujoco-scenes
+warp-lang
 
 # Inference dependencies
 kinfer[jax]
